URL to DSV 2019.

--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -170,7 +170,7 @@ activities:
 - acronym: <abbr>DSV</abbr>&nbsp;’19
   desc: Workshop on Democratizing Software Verification
   role: Program Chair
-  URL: 
+  URL: https://smackers.github.io/democratizing-software-verification-workshop-2019/
 
 - acronym: PL&nbsp;Day&nbsp;’18
   desc: IBM Programming Languages Day
