--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -327,11 +327,11 @@ publications:
   authors: Michael Emmi and Constantin Enea
   book: Proc. 46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages
   acronym: <abbr>POPL</abbr>&nbsp;’19
-  pages:
+  pages: 60:1–60:28
   publisher: <abbr>ACM</abbr>
   year: 2019
-  doi:
-  pdf:
+  doi: https://dl.acm.org/citation.cfm?id=3290373
+  pdf: papers/conf-popl-EmmiE19.pdf
 
 - title: "SideTrail: Verifying Time-Balancing of Cryptosystems"
   authors: Konstantinos Athanasiou, Byron Cook, Michael Emmi, Colm MacCarthaigh, Daniel Schwartz-Narbonne and Serdar Tasiran
