--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -8,6 +8,8 @@ place: <abbr>SRI</abbr> International
 links:
 - name: dblp
   url: http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael
+- name: Google Scholar
+  url: https://scholar.google.com/citations?user=fOxqIXYAAAAJ
 - name: GitHub
   url: https://github.com/michael-emmi
 - name: CV
