--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -328,24 +328,24 @@ publications:
   book: Proc. 31st International Conference on Computer Aided Verification
   acronym: CAV ’19
   series: LNCS
-  volume:
-  pages:
+  volume: 11562
+  pages: 324–343
   publisher: Springer
   year: 2019
-  doi:
-  pdf:
+  doi: https://doi.org/10.1007/978-3-030-25543-5_19
+  pdf: papers/conf-cav-BiswasEE19.pdf
 
 - title: "Violat: Generating Tests of Observational Refinement for Concurrent Objects"
   authors: Michael Emmi and Constantin Enea
   book: Proc. 31st International Conference on Computer Aided Verification
   acronym: CAV ’19
   series: LNCS
-  volume:
-  pages:
+  volume: 11562
+  pages: 534–546
   publisher: Springer
   year: 2019
-  doi:
-  pdf:
+  doi: https://doi.org/10.1007/978-3-030-25543-5_30
+  pdf: papers/conf-cav-EmmiE19.pdf
 
 - title: "ct-fuzz: Fuzzing for Timing Leaks"
   authors: Michael Emmi, Shaobo He, and Gabriela Ciocarlie
