--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,10 +11,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Prepare
-        run: gem install mustache
+        run: sudo gem install mustache
 
       - name: Build
-        run: ./bin/meta.sh && ninja
+        run: ./bin/meta.sh && ninja && tree
 
       # - name: Deploy
       #   uses: peaceiris/actions-gh-pages@v3
