--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,10 +11,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Prepare
-        run: sudo gem install mustache
+        run: |
+          sudo gem install mustache
+          brew install ninja
 
       - name: Build
-        run: ./bin/meta.sh && ninja && tree
+        run: |
+          ./bin/meta.sh
+          ninja
+          tree
 
       # - name: Deploy
       #   uses: peaceiris/actions-gh-pages@v3
