--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -148,7 +148,7 @@ activities:
 - acronym: SAS ’21
   desc: 27th International Static Analysis Symposium
   role: Program Committee
-  URL: 
+  URL: https://conf.researchr.org/home/sas-2021
   
 - acronym: CSF ’21
   desc: 34th IEEE Computer Security Foundations Symposium
