--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -131,7 +131,7 @@ references:
 - name: Shaz Qadeer
   title: Research Scientist
   where: Facebook Research
-  web: http://research.microsoft.com/en-us/people/qadeer/
+  web: https://research.fb.com/people/qadeer-shaz/
 
 - name: Dimitra Giannakopoulou
   title: Research Computer Scientist
